--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "estate-monitor",
     "private": true,
     "scripts": {
+      "start:scraper": "npm run start --workspace=@estate-monitor/scraper",
       "dev:scraper": "npm run dev --workspace=@estate-monitor/scraper",
       "build:scraper": "npm run build --workspace=@estate-monitor/scraper "
     },
