--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "ES2021",
     "allowJs": true,
     "outDir": "dist",
+    "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
