--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
     "name": "estate-monitor",
     "private": true,
     "scripts": {
-      "start:scraper": "npm run start --workspace=@estate-monitor/scraper",
+      "dev:app": "npm run dev --workspace=@estate-monitor/app",
       "dev:scraper": "npm run dev --workspace=@estate-monitor/scraper",
+      "start:app": "npm run start --workspace=@estate-monitor/app",
+      "start:scraper": "npm run start --workspace=@estate-monitor/scraper",
       "build:scraper": "npm run build --workspace=@estate-monitor/scraper ",
+      "build:app": "npm run build --workspace=@estate-monitor/app",
       "dev:db": "npm run preview --workspace=@estate-monitor/db"
     },
     "devDependencies": {},
