--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rimraf ./dist && tsc",
     "dev": "npx nodemon",
-    "start": "npm run build && node dist/index.js",
+    "start": "npm run build && node dist/crawler/src/index.js",
     "lint": "eslint . --ext .ts",
     "prettier-format": "run-script-os",
     "prettier-format:win32": "prettier --config .prettierrc \"./src/**/*.ts\" --write",
