--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
         "dev:crawler": "npm run dev --workspace=@estate-monitor/crawler",
         "start:app": "npm run start --workspace=@estate-monitor/app",
         "start:crawler": "npm run start --workspace=@estate-monitor/crawler",
-        "build:crawler": "npm run build --workspace=@estate-monitor/crawler ",
         "build:app": "npm run build --workspace=@estate-monitor/app",
-        "dev:db": "npm run preview --workspace=@estate-monitor/db"
+        "build:crawler": "npm run build --workspace=@estate-monitor/crawler ",
+        "build:core": "npm run generate --workspace=@estate-monitor/core",
+        "dev:db": "npm run preview --workspace=@estate-monitor/db",
+        "postinstall": "npm run build:core"
     },
     "workspaces": [
         "packages/*"
