--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rimraf ./dist && tsc",
     "dev": "npx nodemon",
-    "start": "npm run build && node dist/index.js",
+    "start": "npm run build && pm2 start dist/index.js",
     "lint": "eslint . --ext .ts",
     "prettier-format": "run-script-os",
     "prettier-format:win32": "prettier --config .prettierrc \"./src/**/*.ts\" --write",
@@ -54,6 +54,7 @@
     "@prisma/client": "^4.12.0",
     "jest-cucumber": "^3.0.1",
     "lodash": "^4.17.21",
-    "playwright": "^1.30.0"
+    "playwright": "^1.30.0",
+    "pm2": "^5.3.0"
   }
 }
