--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "dev:crawler": "npm run dev --workspace=@estate-monitor/crawler",
         "start:app": "npm run start --workspace=@estate-monitor/app",
         "start:crawler": "npm run start --workspace=@estate-monitor/crawler",
+        "start:crawler:pm2": "npm run start:pm2 --workspace=@estate-monitor/crawler",
         "build:digitalocean": "npm install --production=false && npm run build:crawler",
         "build:app": "npm run build --workspace=@estate-monitor/app",
         "build:crawler": "npm run build --workspace=@estate-monitor/crawler ",
