--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -20,6 +20,7 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "lodash": "^4.17.21",
     "next": "^13.2.4",
     "next-auth": "4.20.1",
     "react": "18.2.0",
