Migrate to Next App structure
Use server actions
Remove server API at all

Signed-off-by: Gevorg Harutyunyan <gevharut@gmail.com>

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -20,12 +20,13 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "@vercel/kv": "^0.2.1",
     "date-fns": "^2.29.3",
     "lodash": "^4.17.21",
-    "next": "^13.2.4",
+    "next": "^13.4.4",
     "next-auth": "4.20.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
@@ -39,7 +40,7 @@
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.36.0",
-    "eslint-config-next": "^13.2.4",
+    "eslint-config-next": "^13.4.4",
     "playwright": "^1.32.2",
     "postcss": "^8.4.21",
     "prettier": "^2.8.6",
