--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -56,6 +56,8 @@
     "jest-cucumber": "^3.0.1",
     "lodash": "^4.17.21",
     "playwright": "^1.44.1",
-    "pm2": "^5.3.0"
+    "playwright-extra": "^4.3.6",
+    "pm2": "^5.3.0",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
